--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,13 +58,14 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\MapEditing\HexMapEditor.cs" />
     <Compile Include="Assets\Scripts\Grid\HexCoordinates.cs" />
-    <Compile Include="Assets\Scripts\Cells\HexCell.cs" />
-    <Compile Include="Assets\Scripts\Cells\HexMesh.cs" />
+    <Compile Include="Assets\Scripts\Hex\HexDirection.cs" />
+    <Compile Include="Assets\Scripts\Hex\HexCell.cs" />
+    <Compile Include="Assets\Scripts\Hex\HexMesh.cs" />
+    <Compile Include="Assets\Scripts\Hex\Quads\Quads.cs" />
     <Compile Include="Assets\Scripts\Grid\HexGrid.cs" />
     <Compile Include="Assets\Scripts\Metrics\HexMetrics.cs" />
-    <Compile Include="Assets\Scripts\Cells\Triangles\Triangles.cs" />
-    <Compile Include="Assets\Scripts\Cells\HexDirection.cs" />
-    <Compile Include="Assets\Scripts\Cells\Quads\Quads.cs" />
+    <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
+    <Compile Include="Assets\Scripts\Hex\HexEdgeType.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
