--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,8 +64,9 @@
     <Compile Include="Assets\Scripts\Hex\Quads\Quads.cs" />
     <Compile Include="Assets\Scripts\Grid\HexGrid.cs" />
     <Compile Include="Assets\Scripts\Metrics\HexMetrics.cs" />
-    <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
     <Compile Include="Assets\Scripts\Hex\HexEdgeType.cs" />
+    <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
+    <Compile Include="Assets\Scripts\Hex\Shape.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
