--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Assets\Scripts\Grid\HexCoordinates.cs" />
     <Compile Include="Assets\Scripts\Hex\HexDirection.cs" />
     <Compile Include="Assets\Scripts\Hex\Shape.cs" />
+    <Compile Include="Assets\Scripts\Hex\EdgeVertices.cs" />
     <Compile Include="Assets\Scripts\Hex\HexCell.cs" />
     <Compile Include="Assets\Scripts\Hex\HexMesh.cs" />
     <Compile Include="Assets\Scripts\Hex\Quads\Quads.cs" />
@@ -67,7 +68,7 @@
     <Compile Include="Assets\Scripts\Metrics\HexMetrics.cs" />
     <Compile Include="Assets\Scripts\Hex\HexEdgeType.cs" />
     <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
-    <Compile Include="Assets\Scripts\Hex\EdgeVertices.cs" />
+    <Compile Include="Assets\Scripts\Grid\HexGridChunk.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
