--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\Hex\HexEdgeType.cs" />
     <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
     <Compile Include="Assets\Scripts\Grid\HexGridChunk.cs" />
+    <Compile Include="Assets\Scripts\Hex\Pooling\ListPool.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
