--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,12 +67,13 @@
     <Compile Include="Assets\Scripts\Camera\MapCam.cs" />
     <Compile Include="Assets\Scripts\Grid\HexGrid.cs" />
     <Compile Include="Assets\Scripts\Metrics\HexMetrics.cs" />
+    <Compile Include="Assets\Scripts\Hex\Pooling\ListPool.cs" />
     <Compile Include="Assets\Scripts\Hex\HexEdgeType.cs" />
     <Compile Include="Assets\Scripts\Hex\Triangles\Triangles.cs" />
     <Compile Include="Assets\Scripts\Grid\HexGridChunk.cs" />
-    <Compile Include="Assets\Scripts\Hex\Pooling\ListPool.cs" />
   </ItemGroup>
   <ItemGroup>
+     <None Include="Assets\Materials\Shaders\River.shader" />
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Users\Nicole\Documents\Unity\2020.1.11f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
