--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Materials\Shaders\River.shader" />
+     <None Include="Assets\Materials\Shaders\Road.shader" />
      <None Include="Assets\Materials\Shaders\VertexColors.shader" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Users\Nicole\Documents\Unity\2020.1.11f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
